test/e2e/chainsaw/eventgateway/sni-routing/03-tls-server-policy-assert.yaml
---
apiVersion: configuration.konghq.com/v1alpha1
kind: EventGatewayListenerPolicy
metadata:
  name: ($tls_server_policy_name)
status:
  (conditions[?type == 'Programmed']):
    - status: "True"
