test/e2e/chainsaw/eventgateway/sni-routing/04-sni-forward-policy-assert.yaml
---
apiVersion: configuration.konghq.com/v1alpha1
kind: EventGatewayListenerPolicy
metadata:
  name: ($sni_forward_policy_name)
status:
  (conditions[?type == 'Programmed']):
    - status: "True"
